...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Issuers-->
        <scene sceneID="Xgs-yd-LoS">
            <objects>
                <collectionViewController title="Issuers" id="NJ9-PO-4VH" customClass="IssuerCollectionViewController" customModule="certificates" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="lZ5-wo-EOb">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="8" id="NvC-Dm-nCF">
                            <size key="itemSize" width="162" height="197"/>
...
                            <outlet property="delegate" destination="NJ9-PO-4VH" id="Xu9-lB-Zex"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" id="3aE-tM-Qbn">
                        <barButtonItem key="rightBarButtonItem" image="icon_settings" id="fxI-yi-2W3">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Settings"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="settingsTapped:" destination="NJ9-PO-4VH" id="ECr-c4-jm9"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
