...
    public static var FileAlreadyImportedExplanation : String = NSLocalizedString("FileAlreadyImportedExplanation", comment: "")

    /// Base translation: Couldn't delete file
    public static var DeleteFileError : String = NSLocalizedString("DeleteFileError", comment: "")

    /// Base translation: Success!
    public static var Success : String = NSLocalizedString("Success", comment: "")

    /// Base translation: Something went wrong when deleting that certificate.
    public static var DeleteCredentialGenericError : String = NSLocalizedString("DeleteCredentialGenericError", comment: "")

    /// Base translation: Please Update Blockcerts Wallet
    public static var AppUpdateAlertTitle : String = NSLocalizedString("AppUpdateAlertTitle", comment: "")
...
    /// Base translation: You have %@ credentials
    public static func YouHaveMultipleCredentials(_ value1 : String) -> String {
        return String(format: NSLocalizedString("YouHaveMultipleCredentials", comment: ""), value1)
    }

    /// Base translation: Verify
    public static var Verify : String = NSLocalizedString("Verify", comment: "")

    /// Base translation: Issuer URL
    public static var IssuerURL : String = NSLocalizedString("IssuerURL", comment: "")

    /// Base translation: Add Credential
    public static var AddCredential : String = NSLocalizedString("AddCredential", comment: "")
...
